Added keygen ceremony status check and return public keys
